--- a/app/_locales/cs/messages.json
+++ b/app/_locales/cs/messages.json
@@ -268,9 +268,6 @@
   "loadingTokens": {
     "message": "Načítám tokeny..."
   },
-  "login": {
-    "message": "Přihlásit"
-  },
   "lock": {
     "message": "Odhlásit"
   },
@@ -510,5 +507,8 @@
   },
   "youSign": {
     "message": "Podepisujete"
+  },
+  "unlock": {
+    "message": "Přihlásit"
   }
 }
