--- a/app/_locales/hn/messages.json
+++ b/app/_locales/hn/messages.json
@@ -248,9 +248,6 @@
   "localhost": {
     "message": "स्थानीयहोस्ट 8545"
   },
-  "login": {
-    "message": "लॉग इन करें"
-  },
   "lock": {
     "message": "लॉग आउट करें"
   },
@@ -469,5 +466,8 @@
   },
   "youSign": {
     "message": "आप हस्ताक्षर कर रहे हैं"
+  },
+  "unlock": {
+    "message": "लॉग इन करें"
   }
 }
